--- a/cf/create-cicd-simple.yaml
+++ b/cf/create-cicd-simple.yaml
@@ -54,7 +54,7 @@ Resources:
                     Configuration: 
                         BranchName: "main"
                         OutputArtifactFormat: "CODE_ZIP"
-                        PollForSourceChanges: "false"
+                        PollForSourceChanges: false
                         RepositoryName: !Ref CodeCommitRepoName
                     Region: !Ref AWS::Region
                     OutputArtifacts:
@@ -90,7 +90,7 @@ Resources:
                 phases:
                   build:
                     commands:
-                      - aws s3 sync . s3://${s3BucketName}/dags/ 
+                      - aws s3 sync . s3://${s3BucketName}/ 
             Artifacts: 
                 EncryptionDisabled: false
                 Name: !Ref 'CodeBuildProjectName'
@@ -115,7 +115,57 @@ Resources:
                 S3Logs: 
                     Status: "DISABLED"
                     EncryptionDisabled: false
-    
+
+    AmazonCloudWatchEventRule:
+      Type: AWS::Events::Rule
+      Properties:
+        EventPattern:
+          source:
+            - aws.codecommit
+          detail-type:
+            - 'CodeCommit Repository State Change'
+          resources:
+            - !Join [ '', [ 'arn:aws:codecommit:', !Ref 'AWS::Region', ':', !Ref 'AWS::AccountId', ':', !Ref CodeCommitRepoName ] ]
+          detail:
+            event:
+              - referenceCreated
+              - referenceUpdated
+            referenceType:
+              - branch
+            referenceName:
+              - main
+        Targets:
+          -
+            Arn: 
+              !Join [ '', [ 'arn:aws:codepipeline:', !Ref 'AWS::Region', ':', !Ref 'AWS::AccountId', ':', !Ref CodePipelineName ] ]
+            RoleArn: !GetAtt AmazonCloudWatchEventRole.Arn
+            Id: codepipeline-AppPipeline
+
+    AmazonCloudWatchEventRole:
+      Type: AWS::IAM::Role
+      Properties:
+        AssumeRolePolicyDocument:
+          Version: 2012-10-17
+          Statement:
+            -
+              Effect: Allow
+              Principal:
+                Service:
+                  - events.amazonaws.com
+              Action: sts:AssumeRole
+        Path: /
+        Policies:
+          -
+            PolicyName: !Sub "${AWS::StackName}-PipelineExecution-Policy"
+            PolicyDocument:
+              Version: 2012-10-17
+              Statement:
+                -
+                  Effect: Allow
+                  Action: codepipeline:StartPipelineExecution
+                  Resource: !Join [ '', [ 'arn:aws:codepipeline:', !Ref 'AWS::Region', ':', !Ref 'AWS::AccountId', ':', !Ref CodePipelineName ] ] 
+
+
     PipelineRole:
       Type: AWS::IAM::Role
       Properties:
@@ -292,23 +342,4 @@ Resources:
                   - !Sub "arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${CodeBuildProjectName}"
                   - !Sub "arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${CodeBuildProjectName}:*"
 
-    CodePielineEventExeRole:
-      Type: AWS::IAM::Role
-      Properties:
-        AssumeRolePolicyDocument:
-          Version: 2012-10-17
-          Statement:
-            - Effect: Allow
-              Principal:
-                Service:
-                  - events.amazonaws.com
-              Action: 'sts:AssumeRole'
-        Policies:
-          - PolicyName: !Sub "${AWS::StackName}-PipelineExecution-Policy"
-            PolicyDocument:
-              Version: 2012-10-17
-              Statement:
-                - Effect: Allow
-                  Action: 'ccodepipeline:StartPipelineExecution'
-                  Resource: !Sub "arn:aws:codepipeline:${AWS::Region}:${AWS::AccountId}:${CodePipelineName}"
 
